--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "engines" : {
         "node": ">= 0.8.0"
     },
-    "dependencies" : {},
     "devDependencies" : {
+        "enb": ">= 0.7.15",
         "jshint": "2.1.3",
         "mocha": "1.11.0",
-        "jscs": "1.0.0"
+        "jscs": "1.0.0",
+        "chai": "1.7.2"
     },
     "scripts": {
         "test" : "make validate",
-        "lint": "make lint"
+        "lint": "make lint",
+        "func-test": "./node_modules/.bin/mocha -u bdd -R spec --recursive test/func"
     }
 }
