Added skeleton of `bem-xjst` tech

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "enb": ">= 0.7.15"
     },
     "dependencies" : {
+        "vow": "*",
+        "vow-fs": "*",
+        "sibling": "*",
         "bem-core": "git://github.com/bem/bem-core.git#v1"
     },
     "devDependencies" : {
