--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "scripts": {
         "test" : "make validate",
         "lint": "make lint",
-        "func-test": "npm run-script build-bemhtml && ./node_modules/.bin/mocha -u bdd -R spec --recursive test/func",
-        "build-bemhtml": "cd test/fixtures/bemhtml && ../../../node_modules/.bin/enb make -n"
+        "func-test": "npm run-script build-bemhtml && npm run-script build-bemhtml-old && ./node_modules/.bin/mocha -u bdd -R spec --recursive test/func",
+        "build-bemhtml": "cd test/fixtures/bemhtml && ../../../node_modules/.bin/enb make -n",
+        "build-bemhtml-old": "cd test/fixtures/bemhtml-old && ../../../node_modules/.bin/enb make -n"
     }
 }
