--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "description": "BEMXJST support for ENB.",
     "name": "enb-bemxjst",
     "version": "0.0.6",
-    "repository": "https://github.com/enb-make/enb-bemxjst",
+    "repository": "git://github.com/enb-make/enb-bemxjst",
+    "homepage": "https://github.com/enb-make/enb-bemxjst",
     "contributors": [
         {
             "name": "Andrew Abramov",
