--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "repository": "git://github.com/enb-make/enb-bemxjst",
     "homepage": "https://github.com/enb-make/enb-bemxjst",
     "bugs": "https://github.com/enb-make/enb-bemxjst/issues",
+    "licenses": [
+        {
+            "type": "MIT",
+            "url": "https://github.com/enb-make/enb-bemxjst/blob/master/LICENSE"
+        }
+    ],
     "contributors": [
         {
             "name": "Andrew Abramov",
