--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
         "enb": ">= 0.8.22"
     },
     "dependencies": {
-        "vow": "*",
-        "vow-fs": "*",
-        "sibling": "*",
+        "vow": ">= 0.3.9",
+        "vow-fs": ">= 0.2.2",
+        "sibling": ">= 0.1.1",
         "bem-core": "git://github.com/bem/bem-core.git#v1",
-        "bemhtml-compat": "0.0.9"
+        "bemhtml-compat": ">= 0.0.10"
     },
     "devDependencies": {
         "enb": ">= 0.8.22",
-        "jshint": "2.1.3",
-        "mocha": "1.11.0",
-        "jscs": "1.0.0",
+        "jshint": "2.1.7",
+        "mocha": "1.12.0",
+        "jscs": "1.0.2",
         "chai": "1.7.2"
     },
     "scripts": {
