--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     },
     "dependencies": {
         "vow": "0.3.11",
-        "sibling": ">= 0.1.1",
+        "sibling": "0.1.1",
         "bem-core": "git://github.com/bem/bem-core.git#v1",
         "bemhtml-compat": ">= 0.0.10"
     },
