--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "vow": "0.3.11",
         "sibling": "0.1.1",
         "bem-core": "git://github.com/bem/bem-core.git#v1",
-        "bemhtml-compat": ">= 0.0.10"
+        "bemhtml-compat": "0.0.11"
     },
     "devDependencies": {
         "enb": ">= 0.8.22",
