--- a/package.json
+++ b/package.json
@@ -43,11 +43,8 @@
         "test": "make validate",
         "lint": "make lint",
         "clean": "make clean",
-        "func-test": "npm run-script build-bemhtml && npm run-script build-bemhtml-old && npm run-script build-bemtree && npm run-script build-bemtree-old && ./node_modules/.bin/mocha -u bdd -R spec --recursive test/func",
-        "build-bemhtml": "cd test/fixtures/bemhtml && YENV=development ../../../node_modules/.bin/enb make --no-cache",
-        "build-bemhtml-old": "cd test/fixtures/bemhtml-old && YENV=development ../../../node_modules/.bin/enb make --no-cache",
-        "build-bemtree": "cd test/fixtures/bemtree && YENV=development ../../../node_modules/.bin/enb make --no-cache",
-        "build-bemtree-old": "cd test/fixtures/bemtree-old && YENV=development ../../../node_modules/.bin/enb make --no-cache",
+        "func-test": "npm run-script build-fixtures && ./node_modules/.bin/mocha -u bdd -R spec --recursive test/func",
+        "build-fixtures": "make build_fixtures",
         "clean-build": "npm run-script clean-build-bemhtml && npm run-script clean-build-bemhtml-old && npm run-script clean-build-bemtree && npm run-script clean-build-bemtree-old",
         "clean-build-bemhtml": "cd test/fixtures/bemhtml && ../../../node_modules/.bin/enb make clean",
         "clean-build-bemhtml-old": "cd test/fixtures/bemhtml-old && ../../../node_modules/.bin/enb make clean",
