Use `bem-xjst` instead of `bem-core` for translate xjst

--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "dependencies": {
         "vow": "0.3.11",
         "sibling": "0.1.1",
-        "bem-core": "git://github.com/bem/bem-core.git#v1.0.0",
+        "bem-xjst": "0.3.6",
         "bemhtml-compat": "0.0.11"
     },
     "devDependencies": {
         "enb": ">= 0.8.22",
+        "bem-core": "git://github.com/bem/bem-core.git#v1.0.0",
         "mocha": "1.13.0",
         "chai": "1.8.1",
         "jshint": "2.3.0",
