Use `must` instead of `chai`

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "enb": ">= 0.8.22",
         "bem-core": "git://github.com/bem/bem-core.git#v1.0.0",
         "mocha": "1.16.1",
-        "chai": "1.8.1",
+        "must": "0.10.0",
         "jshint": "2.3.0",
         "jscs": "1.1.0"
     },
