--- a/package.json
+++ b/package.json
@@ -24,27 +24,24 @@
         "node": ">= 0.8.0"
     },
     "peerDependencies": {
-        "enb": ">= 0.8.22"
+        "enb": ">= 0.8.22 < 1.0.0"
     },
     "dependencies": {
-        "vow": "0.3.12",
-        "sibling": "0.1.1",
+        "vow": "0.4.1",
+        "sibling": "0.1.3",
         "bem-xjst": "0.4.0",
         "bemhtml-compat": "0.0.11"
     },
     "devDependencies": {
-        "enb": ">= 0.8.22",
-        "bem-core": "git://github.com/bem/bem-core.git#v1.1.0",
+        "enb": ">= 0.8.22 < 1.0.0",
+        "bem-core": "git://github.com/bem/bem-core.git#v2.0.0",
         "mocha": "1.17.1",
         "must": "0.11.0",
-        "jshint": "2.4.3",
-        "jscs": "1.2.4",
+        "jshint": "2.4.4",
+        "jscs": "1.3.0",
         "enb-validate-code": "0.0.1"
     },
     "scripts": {
-        "test": "make validate",
-        "lint": "make lint",
-        "build": "make build",
-        "clean": "make clean"
+        "test": "make validate"
     }
 }
