--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "enb": ">= 0.8.22 < 1.0.0",
-    "bem-core": "git://github.com/bem/bem-core.git#v2.0.0",
+    "bower": "1.3.1",
     "mocha": "1.17.1",
     "must": "0.11.0",
     "jshint": "2.4.4",
