--- a/.editorconfig
+++ b/.editorconfig
@@ -8,8 +8,5 @@ indent_style = spaces
 indent_size = 4
 end_of_line = lf
 
-[{package,bower,nodemon}.json]
+[{package,bower}.json]
 indent_size = 2
-
-[Makefile]
-indent_style = tab
