--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "description": "bem-xjst support for ENB",
   "name": "enb-bemxjst",
   "version": "1.3.1",
-  "repository": "git://github.com/enb-make/enb-bemxjst",
-  "homepage": "https://github.com/enb-make/enb-bemxjst",
-  "bugs": "https://github.com/enb-make/enb-bemxjst/issues",
+  "repository": "git://github.com/enb-bem/enb-bemxjst",
+  "homepage": "https://github.com/enb-bem/enb-bemxjst",
+  "bugs": "https://github.com/enb-bem/enb-bemxjst/issues",
   "licenses": [{
     "type": "MIT",
-    "url": "https://github.com/enb-make/enb-bemxjst/blob/master/LICENSE"
+    "url": "https://github.com/enb-bem/enb-bemxjst/blob/master/LICENSE"
   }],
   "contributors": [
     {
