--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "bugs": "https://github.com/enb-bem/enb-bemxjst/issues",
   "licenses": [
     {
-      "type": "MIT",
-      "url": "https://github.com/enb-bem/enb-bemxjst/blob/master/LICENSE"
+      "type": "MPL-2.0",
+      "url": "https://github.com/enb-bem/enb-bemxjst/blob/master/LICENSE.txt"
     }
   ],
   "contributors": [
