--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
     "enb": ">= 0.13.0 < 1.0.0"
   },
   "dependencies": {
-    "vow": "0.4.6",
-    "sibling": "0.1.3",
     "bem-xjst": "0.9.0",
-    "bemhtml-compat": "0.1.2"
+    "bemhtml-compat": "0.1.2",
+    "sibling": "0.1.3",
+    "vow": "0.4.7"
   },
   "devDependencies": {
     "enb": ">= 0.13.0 < 1.0.0",
-    "jscs": "1.7.3",
-    "jshint": "2.5.6",
+    "istanbul": "0.3.5",
+    "jscs": "1.8.1",
+    "jshint": "2.5.11",
     "mocha": "2.0.1",
-    "must": "0.12.0",
-    "mock-fs": "2.3.1",
-    "mock-require": "1.0.4",
-    "istanbul": "0.3.2"
+    "mock-fs": "2.3.2",
+    "mock-require": "1.0.5",
+    "must": "0.12.0"
   },
   "scripts": {
     "test": "npm run lint && npm run cover",
