--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
+sudo: false
+
 language: node_js
-node_js:
-  - "0.10"
-env:
-  global:
-    - GH_REF: github.com/enb-bem/enb-bemxjst.git
-    - ISTANBUL_COVERAGE: true
-branches:
-  only:
-    - master
+
+matrix:
+  include:
+    - node_js: iojs-v1
+    - node_js: iojs-v2
+    - node_js: "0.10"
+    - node_js: "0.12"
+      env: COVERALLS=1
+
 after_success:
-  - npm i coveralls
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && echo "Coverage data was sent to coveralls!"
+  - if [ "x$COVERALLS" = "x1" ]; then npm run coveralls; fi
