Added `includeVow` option to `bemtree` tech

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -14,14 +14,7 @@
     "unused": true,
 
     "node": true,
-    "globals": {
-        "describe": false,
-        "it": false,
-        "before": false,
-        "beforeEach": false,
-        "after": false,
-        "afterEach": false
-    },
+    "mocha": true,
 
     "expr": true,
     "sub": true
