--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jscs": "1.13.1",
     "jshint": "2.7.0",
     "mocha": "2.2.4",
+    "mock-enb": "0.0.1",
     "mock-fs": "2.7.0",
     "mock-require": "1.0.5",
     "must": "0.12.0",
