--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "node": ">= 0.10.0"
   },
   "peerDependencies": {
-    "enb": ">= 0.13.0 < 1.0.0"
+    "enb": "git://github.com/j0tunn/enb.git#feature/job.queue"
   },
   "dependencies": {
     "bem-xjst": "1.0.3",
     "bemhtml-compat": "0.1.2",
-    "sibling": "0.1.3",
     "vow": "0.4.10"
   },
   "devDependencies": {
@@ -40,7 +39,7 @@
     "jscs": "1.13.1",
     "jshint": "2.7.0",
     "mocha": "2.2.4",
-    "mock-enb": "0.0.1",
+    "mock-enb": "git://github.com/j0tunn/mock-enb#feature/job.queue.stub",
     "mock-fs": "2.7.0",
     "mock-require": "1.0.5",
     "must": "0.12.0",
