--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Andrew Abramov <andrewblond@yandex.com>",
   "description": "bem-xjst support for ENB",
   "name": "enb-bemxjst",
-  "version": "2.0.0-rc",
+  "version": "2.0.0",
   "repository": "git://github.com/enb-bem/enb-bemxjst",
   "homepage": "https://github.com/enb-bem/enb-bemxjst",
   "bugs": "https://github.com/enb-bem/enb-bemxjst/issues",
