--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bem-xjst": "1.2.1",
     "bemhtml-compat": "0.1.2",
     "browserify": "11.0.1",
+    "clear-require": "1.0.1",
     "vow": "0.4.10",
     "vow-node": "0.3.0"
   },
