--- a/package.json
+++ b/package.json
@@ -26,23 +26,25 @@
     "node": ">= 0.10.0"
   },
   "peerDependencies": {
-    "enb": ">= 0.16.0 < 1.0.0"
+    "enb": ">= 0.16.0 < 2.0.0"
   },
   "dependencies": {
     "bem-xjst": "1.2.1",
     "bemhtml-compat": "0.1.2",
     "browserify": "11.0.1",
     "clear-require": "1.0.1",
+    "enb-async-require": "1.0.1",
+    "enb-require-or-eval": "1.0.2",
     "vow": "0.4.10",
     "vow-node": "0.3.0"
   },
   "devDependencies": {
-    "enb": ">= 0.16.0 < 1.0.0",
+    "enb": ">= 0.16.0 < 2.0.0",
     "istanbul": "0.3.18",
     "jscs": "1.13.1",
     "jshint": "2.8.0",
     "mocha": "2.2.5",
-    "mock-enb": "0.1.0",
+    "mock-enb": "0.3.0",
     "mock-fs": "3.1.0",
     "mock-require": "1.1.0",
     "must": "0.12.0",
