--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "chai": "3.4.1",
+    "chai-as-promised": "^5.2.0",
     "enb": ">= 0.16.0 < 2.0.0",
     "istanbul": "0.4.1",
     "jscs": "2.8.0",
