--- a/package.json
+++ b/package.json
@@ -26,21 +26,25 @@
     "node": ">= 0.10.0"
   },
   "peerDependencies": {
-    "enb": ">= 0.13.0 < 1.0.0"
+    "enb": ">= 0.15.0 < 2.0.0"
   },
   "dependencies": {
     "bem-xjst": "1.0.3",
     "bemhtml-compat": "0.1.2",
+    "clear-require": "1.0.1",
+    "enb-async-require": "1.0.1",
+    "enb-require-or-eval": "1.0.2",
     "sibling": "0.1.3",
     "vow": "0.4.10"
   },
   "devDependencies": {
-    "enb": ">= 0.13.0 < 1.0.0",
+    "enb": ">= 0.15.0 < 2.0.0",
     "istanbul": "0.3.5",
     "jscs": "1.8.1",
     "jshint": "2.5.11",
     "mocha": "2.0.1",
-    "mock-fs": "2.3.2",
+    "mock-enb": "0.3.0",
+    "mock-fs": "3.8.0",
     "mock-require": "1.0.5",
     "must": "0.12.0"
   },
