--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "mock-enb": "^0.3.2",
     "mock-fs": "^3.9.0",
     "must": "^0.13.1",
+    "node-eval": "^1.0.2",
+    "proxyquire": "^1.7.10",
     "ym": "^0.1.2"
   },
   "scripts": {
