--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
   "dependencies": {
     "bem-xjst": "8.3.1",
     "browserify": "13.1.1",
-    "clear-require": "1.0.1",
-    "enb-async-require": "1.0.1",
-    "enb-require-or-eval": "1.0.2",
+    "file-eval": "1.1.0",
     "lodash": "4.16.6",
     "vow": "0.4.13",
     "vow-node": "0.3.0"
