--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "enb": ">= 0.16.0 < 2.0.0"
   },
   "dependencies": {
-    "bem-xjst": "4.4.1",
+    "bem-xjst": "SlNPacifist/bem-xjst#fix/restoreCall",
     "browserify": "13.0.0",
     "clear-require": "1.0.1",
     "enb-async-require": "1.0.1",
