--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "must": "^0.13.1",
     "node-eval": "^1.0.2",
     "proxyquire": "^1.7.10",
+    "sinon": "^4.0.0",
     "ym": "^0.1.2"
   },
   "scripts": {
