--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lodash": "4.17.4",
     "vow": "0.4.15",
     "vow-node": "0.3.0",
-    "enb-source-map": "github:enb/enb-source-map#prev-source-maps-support"
+    "enb-source-map": "1.12.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
