--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-sudo: false
-
 language: node_js
+node_js:
+  - 4
+  - 5
+  - 6
+  - 7
+  - 8
 
-matrix:
-  include:
-    - node_js: "4"
-    - node_js: "6"
-    - node_js: "8"
-      env: COVERALLS=1
+env:
+  global:
+    - ISTANBUL_COVERAGE: yes
 
 after_success:
-  - if [ "x$COVERALLS" = "x1" ]; then npm run coveralls; fi
+  - npm i coveralls
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && echo "Coverage data was sent to coveralls!"
